manifests/kuard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "traefik"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    # change to your domain
    - kuard.yourhostname.com
    secretName: quickstart-prod-tls
  ingressClassName: traefik
  rules:
    # change to your domain
  - host: kuard.yourhostname.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
